# PolyEditor

./: .clang-format  CMakeLists.txt
PolyEditor/: CMakeLists.txt
PolyEditor/API/Managers/: CMakeLists.txt
PolyEditor/API/Managers/WindowsManagerAPI/: CMakeLists.txt
PolyEditor/API/Managers/WindowsManagerAPI/src/: WindowsManagerAPI.hpp
PolyEditor/API/SubEditors/: CMakeLists.txt
PolyEditor/API/SubEditors/ResourceSubEditorAPI/: CMakeLists.txt
PolyEditor/API/SubEditors/ResourceSubEditorAPI/src/: ResourceBrowserAPI.hpp
PolyEditor/Plugins/: CMakeLists.txt
PolyEditor/Plugins/Managers/: CMakeLists.txt
PolyEditor/Plugins/Managers/WindowsManagerPlugin/: CMakeLists.txt
PolyEditor/Plugins/Managers/WindowsManagerPlugin/src/: Plugin.cpp
PolyEditor/Plugins/Managers/WindowsManagerPlugin/src/SubEditorWindowHandle/: SubEditorWindowHandle.cpp  SubEditorWindowHandle.hpp
PolyEditor/Plugins/Managers/WindowsManagerPlugin/src/TopLevelWindowHandle/: TopLevelWindowHandle.cpp  TopLevelWindowHandle.hpp
PolyEditor/Plugins/Managers/WindowsManagerPlugin/src/WindowsManager/: WindowsManager.cpp  WindowsManager.hpp
PolyEditor/Plugins/SubEditors/: CMakeLists.txt
PolyEditor/Plugins/SubEditors/ResourceSubEditorPlugin/: CMakeLists.txt
PolyEditor/Plugins/SubEditors/ResourceSubEditorPlugin/src/: Plugin.cpp
PolyEditor/Plugins/SubEditors/ResourceSubEditorPlugin/src/SubEditor/: ResourceSubEditor.cpp  ResourceSubEditor.h  ResourceSubEditor.hpp  ResourceSubEditor.ui  ResourceSubEditorWidget.ui
PolyEditor/PolyEditor/: CMakeLists.txt
PolyEditor/PolyEditor/src/: Main.cpp
