# Include dir
set(POLYEDITOR_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/src)

# Source files list
file(GLOB_RECURSE POLYEDITOR_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${POLYEDITOR_INCLUDE}/*.cpp 
    ${POLYEDITOR_INCLUDE}/*.hpp 
    ${POLYEDITOR_INCLUDE}/*.h)
GenerateSourceGoups("${POLYEDITOR_SRCS}")

add_executable(${POLYEDITOR_TARGET} ${POLYEDITOR_SRCS})
target_include_directories(${POLYEDITOR_TARGET} PUBLIC ${POLYEDITOR_INCLUDE})

target_link_libraries(${POLYEDITOR_TARGET} ${WINDOWS_MANAGER_API_TARGET})
target_link_libraries(${POLYEDITOR_TARGET} Qt5::Widgets Qt5::Core)