# Include dir
set(WINDOWS_MANAGER_PLUGIN_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/src)

# Source files list
file(GLOB_RECURSE WINDOWS_MANAGER_PLUGIN_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${WINDOWS_MANAGER_PLUGIN_INCLUDE}/*.cpp 
    ${WINDOWS_MANAGER_PLUGIN_INCLUDE}/*.hpp 
    ${WINDOWS_MANAGER_PLUGIN_INCLUDE}/*.h
    ${WINDOWS_MANAGER_PLUGIN_INCLUDE}/*.ui)
GenerateSourceGoups("${WINDOWS_MANAGER_PLUGIN_SRCS}")

add_library(${WINDOWS_MANAGER_PLUGIN_TARGET} SHARED ${WINDOWS_MANAGER_PLUGIN_SRCS} ${AUTOGEN_SOURCE_GROUP})
target_include_directories(${WINDOWS_MANAGER_PLUGIN_TARGET} PRIVATE ${WINDOWS_MANAGER_PLUGIN_INCLUDE})

target_link_libraries(${WINDOWS_MANAGER_PLUGIN_TARGET} PRIVATE ${WINDOWS_MANAGER_API_TARGET})
target_link_libraries(${WINDOWS_MANAGER_PLUGIN_TARGET} PRIVATE PolyDock)

set_target_properties (${WINDOWS_MANAGER_PLUGIN_TARGET} PROPERTIES FOLDER "Plugins/Managers")